kube/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tracking-api
spec:
  revisionHistoryLimit: 3
  replicas: 2
  selector:
    matchLabels:
      app: tracking-api
  template:
    metadata:
      labels:
        app: tracking-api
    spec:
      imagePullSecrets:
        - name: scw-registry-secret
      containers:
        - name: tracking-api
          image: rg.fr-par.scw.cloud/goodfood/tracking-api:dev
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
